--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -1,4 +1,67 @@
-// Small screens
+// Types
+
+@font-face {
+    font-family: Roboto-Regular;
+    src: url(../fonts/Roboto/Roboto-Regular.ttf);
+}
+@font-face {
+    font-family: Roboto-Medium;
+    src: url(../fonts/Roboto/Roboto-Medium.ttf);
+}
+@font-face {
+    font-family: Roboto-Bold;
+    src: url(../fonts/Roboto/Roboto-Bold.ttf);
+}
+@font-face {
+    font-family: Roboto-Black;
+    src: url(../fonts/Roboto/Roboto-Black.ttf);
+}
+@font-face {
+    font-family: Cabin-Bold;
+    src: url(../fonts/Cabin/Cabin-Bold.ttf);
+}
+@font-face {
+    font-family: Cabin;
+    src: url(../fonts/Cabin/Cabin-Regular.ttf);
+}
+
+// Styles
+
+h1 {
+    font-family: 'Roboto-Black';
+    font-size: 67.5px;
+    color: #104150;
+}
+
+h2 {
+    font-family: 'Roboto-Medium';
+    font-size: 24px;
+    font-variant: small-caps;
+    color: #fff;
+}
+
+h3 {
+    font-family: 'Roboto-Medium';
+    font-size: 40px;
+    line-height: 52px;
+    color: #104150;
+    margin-bottom: 20px;
+}
+
+h4 {
+    font-family: 'Roboto-Medium';
+    font-size: 24px;
+    color: #104150;
+    font-variant: small-caps;
+}
+
+p {
+    font-family: 'Cabin';
+    font-size: 18px;
+    line-height: 30px;
+}
+
+// Large screens
 header {
     background-image: url('../img/backgroundhero.jpg');
     background-position: center center;
@@ -6,11 +69,15 @@ header {
     text-align: center;
     height: 90vh;
     #logo {
-        margin-top: 100px;
+        margin-top: 50px;
     }
     .grid-container,
     .grid-y {
         height: 100%;
+    }
+    p {
+        font-size:16px;
+        color: #fff;
     }
     
 }
@@ -21,6 +88,9 @@ header {
         position: relative;
         top: -100px;
         left: 300px;
+    }
+    .large-4 {
+        padding-top: 50px;
     }
 }
 
@@ -54,6 +124,13 @@ header {
     &,
     .grid-y {
         height: 600px;
+    }
+    h3 {
+        font-family: 'Cabin-bold';
+        color: #fff;
+    }
+    span {
+        font-variant: small-caps;
     }
 }
 
