--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -42,8 +42,8 @@ h2 {
 
 h3 {
     font-family: 'Roboto-Medium';
-    font-size: 40px;
-    line-height: 52px;
+    font-size: 36px;
+    line-height: 45px;
     color: #104150;
     margin-bottom: 20px;
 }
@@ -55,10 +55,42 @@ h4 {
     font-variant: small-caps;
 }
 
+h5 {
+    font-family: 'Cabin-Bold';
+    font-size: 18px;
+}
+
 p {
     font-family: 'Cabin';
     font-size: 18px;
     line-height: 30px;
+}
+
+a.button {
+    background-color: #2D9CDB;
+    border: 2px;
+    border-radius: 25px;
+    color: white;
+    padding: 8px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    font-family: 'Roboto-Bold';
+    border-style: solid;
+    border-color: #2D9CDB;
+}
+
+.button:hover {
+    background: #fff;
+    border: 2px;
+    border-color: #2D9CDB;
+    color: #2D9CDB;
+    border-style: solid;
+}
+
+.shadow {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 20px 60px 0px;
 }
 
 // Large screens
@@ -67,7 +99,7 @@ header {
     background-position: center center;
     background-size: cover;
     text-align: center;
-    height: 90vh;
+    height: 100vh;
     #logo {
         margin-top: 50px;
     }
@@ -79,7 +111,9 @@ header {
         font-size:16px;
         color: #fff;
     }
-    
+    img.scroll {
+        margin-top: -30px;
+    }
 }
 
 #intro {
@@ -115,6 +149,13 @@ header {
 
 #instagram {
     padding: 20px 0 100px;
+    .large-12 {
+        margin-bottom: 20px;
+    }
+    a.button {
+        margin-left: 10px;
+        margin-top: 12px;
+    }
 }
 
 #promo_code {
@@ -132,6 +173,10 @@ header {
     span {
         font-variant: small-caps;
     }
+    img {
+        height: 80px;
+        padding-right: 20px;
+    }
 }
 
 #trip_advisor {
@@ -139,7 +184,16 @@ header {
     padding: 100px 0;
     p {
         width: 90%;
-        margin: 20px auto 0;
+        margin: 0px auto 0;
+    }
+    .large-12 {
+        margin-bottom: 50px;        
+    }
+    h5 {
+         margin-top: 20px;
+    }
+    .large-4:hover {
+        color:#104150;
     }
 }
 
@@ -174,7 +228,7 @@ header {
             top: 60px;
         }
         a {
-            bottom: 60px;
+            bottom: 80px;
         }
     }
 }
@@ -184,6 +238,18 @@ footer {
     background-position: top center;
     background-size: cover;
     height: 750px;
+    .logo_footer {
+        padding-right:15px;
+        padding-top: 10px;
+    }
+    .title_logo {
+        width: 200px;
+        margin-bottom: 30px;
+    }
+    p,a {
+        margin:0;
+        padding: 0;
+    }
 }
 
 
@@ -191,8 +257,38 @@ footer {
 
 @media only screen and (max-width: 40em) {
 
-
-
+    h1 {
+    font-size: 40px;
+    }
+    
+    header {
+        #logo {
+            margin-top: 20px;
+        }
+    }
+        
+    #intro {
+            #intro_image_2 {
+                position: relative;
+                top: -10px;
+                left: 10px;
+            }
+            .large-4 {
+                padding-top: 50px;
+                margin-bottom: 20px;
+            }
+        h3, p {
+            padding: 0 20px;
+            }
+        }
+    
+    #our_team h3, p {
+        padding: 0 10px;
+    }
+    
+    #trip_advisor p {
+        margin-bottom: 20px;
+    }
 
 } /* max-width 640px, mobile-only styles, use when QAing mobile issues */
 
