--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,12 @@ h5 {
   font-family: 'Cabin-Bold';
   font-size: 18px; }
 
+h6 {
+  font-family: 'Roboto-Medium';
+  font-size: 16px;
+  color: #899DA5;
+  font-variant: small-caps; }
+
 p {
   font-family: 'Cabin';
   font-size: 18px;
@@ -161,28 +167,6 @@ header {
 
 #beaches {
   padding: 20px 0 100px; }
-  #beaches #matosinhos,
-  #beaches #leca {
-    position: relative; }
-  #beaches #matosinhos div,
-  #beaches #matosinhos a {
-    position: absolute;
-    left: -60px; }
-  #beaches #matosinhos div {
-    top: 20px; }
-  #beaches #matosinhos a {
-    bottom: 20px; }
-  #beaches #leca {
-    padding-top: 40px; }
-    #beaches #leca div,
-    #beaches #leca a {
-      position: absolute;
-      right: -60px;
-      text-align: right; }
-    #beaches #leca div {
-      top: 60px; }
-    #beaches #leca a {
-      bottom: 80px; }
 
 footer {
   background-image: url("../img/Background_footer.jpg");
@@ -190,7 +174,7 @@ footer {
   background-size: cover;
   height: 750px; }
   footer .logo_footer {
-    padding-right: 25px;
+    padding-right: 15px;
     padding-top: 10px; }
   footer .title_logo {
     width: 200px;
@@ -222,6 +206,30 @@ footer {
 /* max-width 640px, mobile-only styles, use when QAing mobile issues */
 /* min-width 641px, medium screens */
 /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
+@media only screen and (min-width: 64.063em) {
+  #beaches #matosinhos,
+  #beaches #leca {
+    position: relative; }
+  #beaches #matosinhos div,
+  #beaches #matosinhos a {
+    position: absolute;
+    left: -60px; }
+  #beaches #matosinhos div {
+    top: 20px; }
+  #beaches #matosinhos a {
+    bottom: 20px; }
+  #beaches #leca {
+    padding-top: 40px; }
+    #beaches #leca div,
+    #beaches #leca a {
+      position: absolute;
+      right: -60px;
+      text-align: right; }
+    #beaches #leca div {
+      top: 60px; }
+    #beaches #leca a {
+      bottom: 80px; } }
+
 /* min-width 1025px, large screens */
 /* min-width 1025px and max-width 1440px, use when QAing large screen-only issues */
 /* min-width 1441px, xlarge screens */
