--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -1,98 +1,3 @@
-// Types
-
-@font-face {
-    font-family: Roboto-Regular;
-    src: url(../fonts/Roboto/Roboto-Regular.ttf);
-}
-@font-face {
-    font-family: Roboto-Medium;
-    src: url(../fonts/Roboto/Roboto-Medium.ttf);
-}
-@font-face {
-    font-family: Roboto-Bold;
-    src: url(../fonts/Roboto/Roboto-Bold.ttf);
-}
-@font-face {
-    font-family: Roboto-Black;
-    src: url(../fonts/Roboto/Roboto-Black.ttf);
-}
-@font-face {
-    font-family: Cabin-Bold;
-    src: url(../fonts/Cabin/Cabin-Bold.ttf);
-}
-@font-face {
-    font-family: Cabin;
-    src: url(../fonts/Cabin/Cabin-Regular.ttf);
-}
-
-// Styles
-
-h1 {
-    font-family: 'Roboto-Black';
-    font-size: 67.5px;
-    color: #104150;
-}
-
-h2 {
-    font-family: 'Roboto-Medium';
-    font-size: 24px;
-    font-variant: small-caps;
-    color: #fff;
-}
-
-h3 {
-    font-family: 'Roboto-Medium';
-    font-size: 36px;
-    line-height: 45px;
-    color: #104150;
-    margin-bottom: 20px;
-}
-
-h4 {
-    font-family: 'Roboto-Medium';
-    font-size: 24px;
-    color: #104150;
-    font-variant: small-caps;
-}
-
-h5 {
-    font-family: 'Cabin-Bold';
-    font-size: 18px;
-}
-
-p {
-    font-family: 'Cabin';
-    font-size: 18px;
-    line-height: 30px;
-}
-
-a.button {
-    background-color: #2D9CDB;
-    border: 2px;
-    border-radius: 25px;
-    color: white;
-    padding: 8px 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    font-family: 'Roboto-Bold';
-    border-style: solid;
-    border-color: #2D9CDB;
-}
-
-.button:hover {
-    background: #fff;
-    border: 2px;
-    border-color: #2D9CDB;
-    color: #2D9CDB;
-    border-style: solid;
-}
-
-.shadow {
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 20px 60px 0px;
-}
-
 // Large screens
 header {
     background-image: url('../img/backgroundhero.jpg');
@@ -164,7 +69,7 @@ header {
     background-size: cover;
     &,
     .grid-y {
-        height: 600px;
+        height: 500px; 
     }
     h3 {
         font-family: 'Cabin-bold';
@@ -199,37 +104,9 @@ header {
 
 #beaches {
     padding: 20px 0 100px;
-    #matosinhos,
-    #leca {
-        position: relative;
-    }
     #matosinhos {
-        div,
-        a {
-            position: absolute;
-            left: -60px;
-        }
-        div {
-            top: 20px;
-        }
-        a {
-            bottom: 20px;
-        }
     }
     #leca {
-        padding-top: 40px;
-        div,
-        a {
-            position: absolute;
-            right: -60px;
-            text-align: right;
-        }
-        div {
-            top: 60px;
-        }
-        a {
-            bottom: 80px;
-        }
     }
 }
 
@@ -290,6 +167,7 @@ footer {
         margin-bottom: 20px;
     }
 
+
 } /* max-width 640px, mobile-only styles, use when QAing mobile issues */
 
 // Medium screens
@@ -304,6 +182,40 @@ footer {
 // Large screens
 @media only screen and (min-width: 64.063em) {
 
+#beaches {
+    #matosinhos,
+    #leca {
+        position: relative;
+    }
+    #matosinhos {
+        div,
+        a {
+            position: absolute;
+            left: -60px;
+        }
+        div {
+            top: 20px;
+        }
+        a {
+            bottom: 20px;
+        }
+    }
+    #leca {
+        padding-top: 40px;
+        div,
+        a {
+            position: absolute;
+            right: -60px;
+            text-align: right;
+        }
+        div {
+            top: 60px;
+        }
+        a {
+            bottom: 80px;
+        }
+    }
+}
 
 } /* min-width 1025px, large screens */
 
