--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -16,19 +16,9 @@ header {
         font-size:16px;
         color: #fff;
     }
-    button.scroll {
-        margin-top: -30px;
-        cursor: pointer;
-    }
 }
 
 #intro {
-    padding: 100px 0 0;
-    #intro_image_2 {
-        position: relative;
-        top: -100px;
-        left: 300px;
-    }
     .large-4 {
         padding-top: 50px;
     }
@@ -36,12 +26,6 @@ header {
 
 #our_team {
     background-color: #EAF5FB;
-    &,
-    .large-4,
-    .grid-y,
-    #team_image {
-        height: 600px;
-    }
     #team_image {
         background-image: url('../img/fototeam.jpg');
         background-position: center center;
@@ -98,9 +82,6 @@ header {
     h5 {
          margin-top: 20px;
     }
-    .large-4:hover {
-        color:#104150;
-    }
 }
 
 #beaches {
@@ -131,6 +112,14 @@ footer {
 }
 
 
+
+
+
+
+
+
+
+
 /* Define mobile styles */
 
 @media only screen and (max-width: 40em) {
@@ -146,23 +135,24 @@ footer {
     }
         
     #intro {
-            #intro_image_2 {
-                position: relative;
-                top: -10px;
-                left: 10px;
-            }
-            .large-4 {
-                padding-top: 50px;
-                margin-bottom: 20px;
-            }
-        h3, p {
-            padding: 0 20px;
-            }
+        padding-bottom: 50px;
+        .large-4 {
+            padding-top: 50px;
+            margin-bottom: 20px;
         }
+    h3, p {
+        padding: 0 20px;
+        }
+    }
     
     #our_team {
+        padding-top: 50px;
         h3, p {
-        padding: 0 10px;
+            padding: 0 10px;
+        }
+        #team_image {
+            width: 100%;
+            height: 250px;
         }
     }
     
@@ -173,7 +163,7 @@ footer {
         h3 {
             padding-top: 20px;
         }
-        iframe {
+        #video {
             width: 100%;
         }
     }
@@ -183,9 +173,46 @@ footer {
             margin-bottom: 10px;
         }
     }
-    
-    #trip_advisor p {
-        margin-bottom: 20px;
+
+    #beaches {
+        #matosinhos,
+        #leca {
+            position: relative;
+            background-color: #104150;
+            margin-bottom: 50px;
+            img {
+                opacity: 0.7;
+            }
+            div {
+                position: absolute;
+                top: 40%;
+            }
+            h3 {
+                width: 60%;
+                margin: 0 auto;
+                color: white;
+            }
+            a {
+                position: absolute;
+                bottom: -30px;
+                right: 0;
+                margin-right: 20px;
+            }
+        }
+        #matosinhos {
+        }
+        #leca {
+        }
+    }
+
+
+    #trip_advisor {
+        p {
+            margin-bottom: 20px;
+        }
+        .large-4 {
+            margin-bottom: 20px;
+        }
     }
 
 
@@ -200,8 +227,53 @@ footer {
 
 @media only screen and (min-width: 40.063em) and (max-width: 64em) { } /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
 
+
+
+
+
+
+
+
+
+
+
 // Large screens
 @media only screen and (min-width: 64.063em) {
+
+#intro {
+    padding: 100px 0 0;
+    .large-4 {
+          order: 2;
+    }
+    .large-7 {
+          order: 1;
+    }
+    #intro_image_2 {
+        position: relative;
+        top: -100px;
+        left: 300px;
+    }
+}
+
+#trip_advisor {
+    .large-4:hover {
+        color:#104150;
+    }
+}
+
+#our_team {
+    &,
+    .large-4,
+    .grid-y,
+    #team_image {
+        height: 600px;
+    }
+}
+
+#competition #video {
+     width: 640px;
+     height: 360px;
+}
 
 #beaches {
     #matosinhos,
