--- a/css/styles.scss
+++ b/css/styles.scss
@@ -101,6 +101,14 @@ a.button {
     border-style: solid;
 }
 
-.shadow {
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 20px 60px 0px;
-}
+
+
+// Medium screens
+@media only screen and (min-width: 40.063em) {
+    
+
+    .shadow {
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 20px 60px 0px;
+    }
+
+} /* min-width 641px, medium screens */
