--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -33,9 +33,6 @@ header {
     }
 }
 
-#competition {
-    padding: 100px 0;
-}
 
 #instagram {
     padding: 20px 0 100px;
@@ -71,7 +68,6 @@ header {
 
 #trip_advisor {
     text-align: center;
-    padding: 100px 0;
     p {
         width: 90%;
         margin: 0px auto 0;
@@ -127,7 +123,7 @@ footer {
     h1 {
     font-size: 40px;
     }
-    
+
     header {
         #logo {
             margin-top: 20px;
@@ -157,6 +153,7 @@ footer {
     }
     
     #competition {
+        padding: 100px 0 20px;
         h3, p {
             padding-left:10px;
         }
@@ -166,6 +163,7 @@ footer {
         #video {
             width: 100%;
         }
+        
     }
     
     #instagram {
@@ -207,6 +205,7 @@ footer {
 
 
     #trip_advisor {
+        padding: 70px 0 20px;
         p {
             margin-bottom: 20px;
         }
@@ -214,6 +213,17 @@ footer {
             margin-bottom: 20px;
         }
     }
+
+    footer {
+        .logo_footer {
+        padding-right:20px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+    .large-5 {
+        margin-bottom: 20px;
+    }
+}
 
 
 } /* max-width 640px, mobile-only styles, use when QAing mobile issues */
@@ -255,7 +265,12 @@ footer {
     }
 }
 
+#competition {
+    padding: 100px 0;
+}
+
 #trip_advisor {
+    padding: 100px 0;
     .large-4:hover {
         color:#104150;
     }
@@ -309,6 +324,7 @@ footer {
         }
     }
 }
+
 
 } /* min-width 1025px, large screens */
 
