--- a/css/main.css
+++ b/css/main.css
@@ -187,13 +187,14 @@ footer {
       width: 100%;
       height: 250px; }
   #competition {
-    padding: 100px 0 20px; }
+    padding: 50px 0 50px; }
     #competition h3, #competition p {
       padding-left: 10px; }
     #competition h3 {
       padding-top: 20px; }
     #competition #video {
-      width: 100%; }
+      width: 100%;
+      margin-top: 30px; }
   #instagram img.foto {
     margin-bottom: 10px; }
   #beaches #matosinhos,
@@ -254,6 +255,16 @@ footer {
       left: 300px; }
   #competition {
     padding: 100px 0; }
+    #competition .large-4 {
+      -webkit-box-ordinal-group: 3;
+      -webkit-order: 2;
+      -ms-flex-order: 2;
+      order: 2; }
+    #competition .large-7 {
+      -webkit-box-ordinal-group: 2;
+      -webkit-order: 1;
+      -ms-flex-order: 1;
+      order: 1; }
   #trip_advisor {
     padding: 100px 0; }
     #trip_advisor .large-4:hover {
