--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -153,7 +153,7 @@ footer {
     }
     
     #competition {
-        padding: 100px 0 20px;
+        padding: 50px 0 50px;
         h3, p {
             padding-left:10px;
         }
@@ -162,6 +162,7 @@ footer {
         }
         #video {
             width: 100%;
+            margin-top: 30px;
         }
         
     }
@@ -267,6 +268,12 @@ footer {
 
 #competition {
     padding: 100px 0;
+    .large-4 {
+          order: 2;
+    }
+    .large-7 {
+          order: 1;
+    }
 }
 
 #trip_advisor {
